[gd_scene load_steps=6 format=3 uid="uid://cfyaf4ikyente"]

[ext_resource type="Script" uid="uid://d34qiog5r04a8" path="res://scripts/GameScreen.gd" id="1"]
[ext_resource type="Script" uid="uid://xbd1n2xwhom3" path="res://scripts/NoteSpawner.gd" id="2"]
[ext_resource type="Script" uid="uid://dkacnraee3abq" path="res://scripts/HitZone.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://dcwqtomkrgupn" path="res://scenes/Note.tscn" id="4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_result"]
bg_color = Color(0.1, 0.05, 0.2, 0.95)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="GameScreen" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.298, 0.431, 0.659, 1)

[node name="Ground" type="ColorRect" parent="."]
offset_top = 610.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.784, 0.659, 1, 1)

[node name="PlayField" type="Node2D" parent="."]

[node name="LineBlue" type="ColorRect" parent="PlayField"]
offset_left = 211.0
offset_right = 215.0
offset_bottom = 610.0
color = Color(0.373, 0.804, 0.894, 0.25)

[node name="LineYellow" type="ColorRect" parent="PlayField"]
offset_left = 424.0
offset_right = 428.0
offset_bottom = 610.0
color = Color(0.941, 0.878, 0.251, 0.25)

[node name="LineRed" type="ColorRect" parent="PlayField"]
offset_left = 638.0
offset_right = 642.0
offset_bottom = 610.0
color = Color(1, 0.439, 0.506, 0.25)

[node name="NoteSpawner" type="Node2D" parent="PlayField"]
script = ExtResource("2")
note_scene = ExtResource("4")

[node name="HitPlatform" type="ColorRect" parent="PlayField"]
offset_left = 30.0
offset_top = 595.0
offset_right = 830.0
offset_bottom = 615.0
color = Color(0.15, 0.15, 0.3, 0.9)

[node name="HitCircleBlue" type="ColorRect" parent="PlayField"]
offset_left = 185.0
offset_top = 534.0
offset_right = 241.0
offset_bottom = 590.0
scale = Vector2(0.996381, 1.0101)
color = Color(0.373, 0.804, 0.894, 0.3)

[node name="HitCircleYellow" type="ColorRect" parent="PlayField"]
offset_left = 398.0
offset_top = 534.0
offset_right = 454.0
offset_bottom = 590.0
color = Color(0.941, 0.878, 0.251, 0.3)

[node name="HitCircleRed" type="ColorRect" parent="PlayField"]
offset_left = 612.0
offset_top = 534.0
offset_right = 668.0
offset_bottom = 590.0
color = Color(1, 0.439, 0.506, 0.3)

[node name="HitZone" type="Node2D" parent="PlayField"]
script = ExtResource("3")
hit_y = 562.0
note_spawner = NodePath("../NoteSpawner")

[node name="HitZone#ButtonBlue" type="Label" parent="."]
offset_left = 185.0
offset_top = 618.0
offset_right = 241.0
offset_bottom = 648.0
theme_override_colors/font_color = Color(0.373, 0.804, 0.894, 1)
theme_override_font_sizes/font_size = 18
text = "[A]"
horizontal_alignment = 1

[node name="HitZone#ButtonYellow" type="Label" parent="."]
offset_left = 398.0
offset_top = 618.0
offset_right = 454.0
offset_bottom = 648.0
theme_override_colors/font_color = Color(0.941, 0.878, 0.251, 1)
theme_override_font_sizes/font_size = 18
text = "[S]"
horizontal_alignment = 1

[node name="HitZone#ButtonRed" type="Label" parent="."]
offset_left = 612.0
offset_top = 618.0
offset_right = 668.0
offset_bottom = 648.0
theme_override_colors/font_color = Color(1, 0.439, 0.506, 1)
theme_override_font_sizes/font_size = 18
text = "[D]"
horizontal_alignment = 1

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="HUD"]
offset_right = 1280.0
offset_bottom = 12.0
show_percentage = false

[node name="ScoreLabel" type="Label" parent="HUD"]
offset_left = 880.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.933, 0.933, 0.933, 1)
theme_override_font_sizes/font_size = 52
text = "0000000"
horizontal_alignment = 2

[node name="MultiplierLabel" type="Label" parent="HUD"]
visible = false
offset_left = 880.0
offset_top = 78.0
offset_right = 1260.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0.518, 1, 0.788, 1)
theme_override_font_sizes/font_size = 26
text = "x1"
horizontal_alignment = 2

[node name="ComboLabel" type="Label" parent="HUD"]
visible = false
offset_left = 860.0
offset_top = 120.0
offset_right = 1260.0
offset_bottom = 170.0
theme_override_colors/font_color = Color(0.667, 0.608, 1, 1)
theme_override_font_sizes/font_size = 32
text = "x0 COMBO"
horizontal_alignment = 2

[node name="FeedbackLabel" type="Label" parent="HUD"]
visible = false
offset_left = 100.0
offset_top = 470.0
offset_right = 820.0
offset_bottom = 530.0
theme_override_colors/font_color = Color(0.518, 1, 0.788, 1)
theme_override_font_sizes/font_size = 42
horizontal_alignment = 1

[node name="CountdownLabel" type="Label" parent="HUD"]
offset_top = 200.0
offset_right = 850.0
offset_bottom = 440.0
theme_override_colors/font_color = Color(1, 1, 1, 0.9)
theme_override_font_sizes/font_size = 180
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultPanel" type="PanelContainer" parent="HUD"]
visible = false
offset_left = 340.0
offset_top = 160.0
offset_right = 940.0
offset_bottom = 560.0
theme_override_styles/panel = SubResource("StyleBoxFlat_result")

[node name="VBox" type="VBoxContainer" parent="HUD/ResultPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="HUD/ResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.518, 1, 0.788, 1)
theme_override_font_sizes/font_size = 52
text = "RÉSULTAT"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="HUD/ResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.439, 0.506, 1)
theme_override_font_sizes/font_size = 64
text = "0000000"
horizontal_alignment = 1

[node name="MaxComboLabel" type="Label" parent="HUD/ResultPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.667, 0.608, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Meilleur combo : 0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="HUD/ResultPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RestartButton" type="Button" parent="HUD/ResultPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "↺  Rejouer"

[node name="MenuButton" type="Button" parent="HUD/ResultPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Menu principal"

[connection signal="pressed" from="HUD/ResultPanel/VBox/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="HUD/ResultPanel/VBox/MenuButton" to="." method="_on_menu_pressed"]
